--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: optimus-backend:latest
+          image: allocateengineering/optimus-backend:latest
           ports:
             - containerPort: 3000
           env:
