--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: optimus-frontend:latest
+          image: allocateengineering/optimus-frontend:latest
           ports:
             - containerPort: 80
           env:
