--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -2,10 +2,14 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: optimus-ingress
+  annotations:
+    alb.ingress.kubernetes.io/scheme: internet-facing
+    alb.ingress.kubernetes.io/target-type: ip
+    alb.ingress.kubernetes.io/healthcheck-path: /
 spec:
+  ingressClassName: alb
   rules:
-    - host: optimus.local
-      http:
+    - http:
         paths:
           - path: /
             pathType: Prefix
