feat: add line for logging into docker hub

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,8 +5,10 @@ run-tests:
 #
 # .build-template: &build-template
 #   image: docker:stable
-#    needs:
+#   needs:
 #     - run-tests
 #   services:
 #     - docker:dind
+#   before_script:
+#     - docker && docker login --username allocateengineering --password $DOCKER_IO_TOKEN
 
